# utx

./: .gitignore  AGENTS.md  ARCHITECTURE_REVIEW.md  Cargo.toml  build.rs
magic/9781788399975/: README.html
src/binprog/: aftpd.rs  agent.rs  agent_def.rs  agent_thread.rs  btx.rs  btx2.rs  ctrl.rs  ds.rs  es.rs  fpull.rs  ftp_thread.rs  genkey.rs  lic.rs  rt.rs  test.rs  test_watch.rs  uagent.rs  udpperf.rs  uproxy.rs  uproxy_config.rs  utx_thread.rs  watch.rs
src/binprog/config/: btx_config.rs  mod.rs  uproxy_config.rs
src/binprog/net/: mod.rs  proxied_tcp.rs  proxied_udp.rs
src/binprog/util/: errors.rs  iptables.rs  mod.rs  mychannel.rs  poller.rs  utx.rs
src/c/: bingen_type.h  clam_test.c  cutx.c  cutx.h  file.cc  file_magic.c  handler.c  hwid.c  magic.c  radix_trie.c  radix_trie.h  scan_virus.c  scan_virus.h  sutx.c  sutx.h  t4.c  trie_tree.c  trie_tree.h  utx.h
src/c/filesample/: 1.html  f1  test-docx.docx
src/c/filesample/tt/: offer.docx
src/c/filesample/tt/customXml/: itemProps1.xml
src/c/filesample/tt/docProps/: app.xml  core.xml  custom.xml
src/c/filesample/tt/word/: document.xml  endnotes.xml  fontTable.xml  footnotes.xml  header1.xml  numbering.xml  settings.xml  styles.xml
src/checker/: checker.rs
src/lib/: audit.rs  audit_sqlite.rs  config.rs  context.rs  def.rs  errors.rs  file_list_history.rs  ftp.rs  lib.rs  license.rs  sftp.rs  util.rs  utx.rs  version.rs  virus.rs  word_checker.rs
src/test/: test.rs
